k8s/networkpolicy.yaml
# Unit 4 - Cloud Computing and DevOps  -  OTHM K/650/7997
# Artefact P4.10   Assessment criteria: AC 3.4 - security
# Default-deny NetworkPolicy with explicit egress
#
# Vera Cree  |  Candidate 240301062  |  CIPS Centre DC2401845

# ---------------- NETWORK POLICY (SECURE - default deny) ----------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: skyforge-api
  namespace: production
spec:
  podSelector:
    matchLabels: { app: skyforge-api }
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector: { matchLabels: { name: ingress-nginx } }
      ports: [{ protocol: TCP, port: 8080 }]
  egress:
    - to: [{ ipBlock: { cidr: 10.30.21.0/24 } }]     # data subnet only
      ports: [{ protocol: TCP, port: 5432 }]
    - to: [{ namespaceSelector: {} , podSelector: { matchLabels: { k8s-app: kube-dns } } }]
      ports: [{ protocol: UDP, port: 53 }]
